include/codata_constants_2018.h

ADD_IMPORT extern const double DEUTERON_NEUTRON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_DEUTERON_NEUTRON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double DEUTERON_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_DEUTERON_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double DEUTERON_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_DEUTERON_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double DEUTERON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double U_DEUTERON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double DEUTERON_RMS_CHARGE_RADIUS;/**< m */
ADD_IMPORT extern const double U_DEUTERON_RMS_CHARGE_RADIUS;/**< m */
ADD_IMPORT extern const double ELECTRON_CHARGE_TO_MASS_QUOTIENT;/**< C kg^-1 */
ADD_IMPORT extern const double U_ELECTRON_CHARGE_TO_MASS_QUOTIENT;/**< C kg^-1 */
ADD_IMPORT extern const double ELECTRON_DEUTERON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_DEUTERON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_DEUTERON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_DEUTERON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_G_FACTOR;/**<  */
ADD_IMPORT extern const double U_ELECTRON_G_FACTOR;/**<  */
ADD_IMPORT extern const double ELECTRON_GYROMAG__RATIO;/**< s^-1 T^-1 */
ADD_IMPORT extern const double U_ELECTRON_GYROMAG__RATIO;/**< s^-1 T^-1 */
ADD_IMPORT extern const double ELECTRON_GYROMAG__RATIO_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double U_ELECTRON_GYROMAG__RATIO_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double ELECTRON_HELION_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_HELION_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_ELECTRON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double ELECTRON_MAG__MOM__ANOMALY;/**<  */
ADD_IMPORT extern const double U_ELECTRON_MAG__MOM__ANOMALY;/**<  */
ADD_IMPORT extern const double ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_MASS;/**< kg */
ADD_IMPORT extern const double U_ELECTRON_MASS;/**< kg */
ADD_IMPORT extern const double ELECTRON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_ELECTRON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double ELECTRON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double U_ELECTRON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double ELECTRON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double U_ELECTRON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double ELECTRON_MUON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_MUON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_MUON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_MUON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_NEUTRON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_NEUTRON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_NEUTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_NEUTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_PROTON_MAG__MOM__RATIO;/**<  */