src/codata_constants_latest.f90


real(cdp), protected, public, bind(C,name="DEUTERON_NEUTRON_MAG__MOM__RATIO"):: &
capi_079=DEUTERON_NEUTRON_MAG__MOM__RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_DEUTERON_NEUTRON_MAG__MOM__RATIO") :: &
capi_U_079=U_DEUTERON_NEUTRON_MAG__MOM__RATIO !< C API dimensionless

real(dp), parameter, public :: DEUTERON_PROTON_MAG__MOM__RATIO=0.30701220939_dp !< dimensionless
real(dp), parameter, public :: U_DEUTERON_PROTON_MAG__MOM__RATIO=0.00000000079_dp !< dimensionless

real(cdp), protected, public, bind(C,name="DEUTERON_PROTON_MAG__MOM__RATIO"):: &
capi_080=DEUTERON_PROTON_MAG__MOM__RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_DEUTERON_PROTON_MAG__MOM__RATIO") :: &
capi_U_080=U_DEUTERON_PROTON_MAG__MOM__RATIO !< C API dimensionless

real(dp), parameter, public :: DEUTERON_PROTON_MASS_RATIO=1.99900750139_dp !< dimensionless
real(dp), parameter, public :: U_DEUTERON_PROTON_MASS_RATIO=0.00000000011_dp !< dimensionless

real(cdp), protected, public, bind(C,name="DEUTERON_PROTON_MASS_RATIO"):: &
capi_081=DEUTERON_PROTON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_DEUTERON_PROTON_MASS_RATIO") :: &
capi_U_081=U_DEUTERON_PROTON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: DEUTERON_RELATIVE_ATOMIC_MASS=2.013553212745_dp !< dimensionless
real(dp), parameter, public :: U_DEUTERON_RELATIVE_ATOMIC_MASS=0.000000000040_dp !< dimensionless

real(cdp), protected, public, bind(C,name="DEUTERON_RELATIVE_ATOMIC_MASS"):: &
capi_082=DEUTERON_RELATIVE_ATOMIC_MASS !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_DEUTERON_RELATIVE_ATOMIC_MASS") :: &
capi_U_082=U_DEUTERON_RELATIVE_ATOMIC_MASS !< C API dimensionless

real(dp), parameter, public :: DEUTERON_RMS_CHARGE_RADIUS=2.12799e-15_dp !< m
real(dp), parameter, public :: U_DEUTERON_RMS_CHARGE_RADIUS=0.00074e-15_dp !< m

real(cdp), protected, public, bind(C,name="DEUTERON_RMS_CHARGE_RADIUS"):: &
capi_083=DEUTERON_RMS_CHARGE_RADIUS !< C API m
real(cdp), protected, public, bind(C,name="U_DEUTERON_RMS_CHARGE_RADIUS") :: &
capi_U_083=U_DEUTERON_RMS_CHARGE_RADIUS !< C API m

real(dp), parameter, public :: ELECTRON_CHARGE_TO_MASS_QUOTIENT=-1.75882001076e11_dp !< C kg^-1
real(dp), parameter, public :: U_ELECTRON_CHARGE_TO_MASS_QUOTIENT=0.00000000053e11_dp !< C kg^-1

real(cdp), protected, public, bind(C,name="ELECTRON_CHARGE_TO_MASS_QUOTIENT"):: &
capi_084=ELECTRON_CHARGE_TO_MASS_QUOTIENT !< C API C kg^-1
real(cdp), protected, public, bind(C,name="U_ELECTRON_CHARGE_TO_MASS_QUOTIENT") :: &
capi_U_084=U_ELECTRON_CHARGE_TO_MASS_QUOTIENT !< C API C kg^-1

real(dp), parameter, public :: ELECTRON_DEUTERON_MAG__MOM__RATIO=-2143.9234915_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_DEUTERON_MAG__MOM__RATIO=0.0000056_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_DEUTERON_MAG__MOM__RATIO"):: &
capi_085=ELECTRON_DEUTERON_MAG__MOM__RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_DEUTERON_MAG__MOM__RATIO") :: &
capi_U_085=U_ELECTRON_DEUTERON_MAG__MOM__RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_DEUTERON_MASS_RATIO=2.724437107462e-4_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_DEUTERON_MASS_RATIO=0.000000000096e-4_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_DEUTERON_MASS_RATIO"):: &
capi_086=ELECTRON_DEUTERON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_DEUTERON_MASS_RATIO") :: &
capi_U_086=U_ELECTRON_DEUTERON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_G_FACTOR=-2.00231930436256_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_G_FACTOR=0.00000000000035_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_G_FACTOR"):: &
capi_087=ELECTRON_G_FACTOR !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_G_FACTOR") :: &
capi_U_087=U_ELECTRON_G_FACTOR !< C API dimensionless

real(dp), parameter, public :: ELECTRON_GYROMAG__RATIO=1.76085963023e11_dp !< s^-1 T^-1
real(dp), parameter, public :: U_ELECTRON_GYROMAG__RATIO=0.00000000053e11_dp !< s^-1 T^-1

real(cdp), protected, public, bind(C,name="ELECTRON_GYROMAG__RATIO"):: &
capi_088=ELECTRON_GYROMAG__RATIO !< C API s^-1 T^-1
real(cdp), protected, public, bind(C,name="U_ELECTRON_GYROMAG__RATIO") :: &
capi_U_088=U_ELECTRON_GYROMAG__RATIO !< C API s^-1 T^-1

real(dp), parameter, public :: ELECTRON_GYROMAG__RATIO_IN_MHZ_T=28024.9514242_dp !< MHz T^-1
real(dp), parameter, public :: U_ELECTRON_GYROMAG__RATIO_IN_MHZ_T=0.0000085_dp !< MHz T^-1

real(cdp), protected, public, bind(C,name="ELECTRON_GYROMAG__RATIO_IN_MHZ_T"):: &
capi_089=ELECTRON_GYROMAG__RATIO_IN_MHZ_T !< C API MHz T^-1
real(cdp), protected, public, bind(C,name="U_ELECTRON_GYROMAG__RATIO_IN_MHZ_T") :: &
capi_U_089=U_ELECTRON_GYROMAG__RATIO_IN_MHZ_T !< C API MHz T^-1

real(dp), parameter, public :: ELECTRON_HELION_MASS_RATIO=1.819543074573e-4_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_HELION_MASS_RATIO=0.000000000079e-4_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_HELION_MASS_RATIO"):: &
capi_090=ELECTRON_HELION_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_HELION_MASS_RATIO") :: &
capi_U_090=U_ELECTRON_HELION_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_MAG__MOM=-9.2847647043e-24_dp !< J T^-1
real(dp), parameter, public :: U_ELECTRON_MAG__MOM=0.0000000028e-24_dp !< J T^-1

real(cdp), protected, public, bind(C,name="ELECTRON_MAG__MOM"):: &
capi_091=ELECTRON_MAG__MOM !< C API J T^-1
real(cdp), protected, public, bind(C,name="U_ELECTRON_MAG__MOM") :: &
capi_U_091=U_ELECTRON_MAG__MOM !< C API J T^-1

real(dp), parameter, public :: ELECTRON_MAG__MOM__ANOMALY=1.15965218128e-3_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_MAG__MOM__ANOMALY=0.00000000018e-3_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_MAG__MOM__ANOMALY"):: &
capi_092=ELECTRON_MAG__MOM__ANOMALY !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_MAG__MOM__ANOMALY") :: &
capi_U_092=U_ELECTRON_MAG__MOM__ANOMALY !< C API dimensionless

real(dp), parameter, public :: ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO=-1.00115965218128_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO=0.00000000000018_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO"):: &
capi_093=ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
capi_U_093=U_ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO=-1838.28197188_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO=0.00000011_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO"):: &
capi_094=ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
capi_U_094=U_ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_MASS=9.1093837015e-31_dp !< kg
real(dp), parameter, public :: U_ELECTRON_MASS=0.0000000028e-31_dp !< kg

real(cdp), protected, public, bind(C,name="ELECTRON_MASS"):: &
capi_095=ELECTRON_MASS !< C API kg
real(cdp), protected, public, bind(C,name="U_ELECTRON_MASS") :: &
capi_U_095=U_ELECTRON_MASS !< C API kg

real(dp), parameter, public :: ELECTRON_MASS_ENERGY_EQUIVALENT=8.1871057769e-14_dp !< J
real(dp), parameter, public :: U_ELECTRON_MASS_ENERGY_EQUIVALENT=0.0000000025e-14_dp !< J

real(cdp), protected, public, bind(C,name="ELECTRON_MASS_ENERGY_EQUIVALENT"):: &
capi_096=ELECTRON_MASS_ENERGY_EQUIVALENT !< C API J
real(cdp), protected, public, bind(C,name="U_ELECTRON_MASS_ENERGY_EQUIVALENT") :: &
capi_U_096=U_ELECTRON_MASS_ENERGY_EQUIVALENT !< C API J

real(dp), parameter, public :: ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV=0.51099895000_dp !< MeV
real(dp), parameter, public :: U_ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV=0.00000000015_dp !< MeV

real(cdp), protected, public, bind(C,name="ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV"):: &
capi_097=ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV !< C API MeV
real(cdp), protected, public, bind(C,name="U_ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
capi_U_097=U_ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV !< C API MeV

real(dp), parameter, public :: ELECTRON_MASS_IN_U=5.48579909065e-4_dp !< u
real(dp), parameter, public :: U_ELECTRON_MASS_IN_U=0.00000000016e-4_dp !< u

real(cdp), protected, public, bind(C,name="ELECTRON_MASS_IN_U"):: &
capi_098=ELECTRON_MASS_IN_U !< C API u
real(cdp), protected, public, bind(C,name="U_ELECTRON_MASS_IN_U") :: &
capi_U_098=U_ELECTRON_MASS_IN_U !< C API u

real(dp), parameter, public :: ELECTRON_MOLAR_MASS=5.4857990888e-7_dp !< kg mol^-1
real(dp), parameter, public :: U_ELECTRON_MOLAR_MASS=0.0000000017e-7_dp !< kg mol^-1

real(cdp), protected, public, bind(C,name="ELECTRON_MOLAR_MASS"):: &
capi_099=ELECTRON_MOLAR_MASS !< C API kg mol^-1
real(cdp), protected, public, bind(C,name="U_ELECTRON_MOLAR_MASS") :: &
capi_U_099=U_ELECTRON_MOLAR_MASS !< C API kg mol^-1

real(dp), parameter, public :: ELECTRON_MUON_MAG__MOM__RATIO=206.7669883_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_MUON_MAG__MOM__RATIO=0.0000046_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_MUON_MAG__MOM__RATIO"):: &
capi_100=ELECTRON_MUON_MAG__MOM__RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_MUON_MAG__MOM__RATIO") :: &
capi_U_100=U_ELECTRON_MUON_MAG__MOM__RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_MUON_MASS_RATIO=4.83633169e-3_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_MUON_MASS_RATIO=0.00000011e-3_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_MUON_MASS_RATIO"):: &
capi_101=ELECTRON_MUON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_MUON_MASS_RATIO") :: &
capi_U_101=U_ELECTRON_MUON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_NEUTRON_MAG__MOM__RATIO=960.92050_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_NEUTRON_MAG__MOM__RATIO=0.00023_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_NEUTRON_MAG__MOM__RATIO"):: &
capi_102=ELECTRON_NEUTRON_MAG__MOM__RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_NEUTRON_MAG__MOM__RATIO") :: &
capi_U_102=U_ELECTRON_NEUTRON_MAG__MOM__RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_NEUTRON_MASS_RATIO=5.4386734424e-4_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_NEUTRON_MASS_RATIO=0.0000000026e-4_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_NEUTRON_MASS_RATIO"):: &
capi_103=ELECTRON_NEUTRON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_NEUTRON_MASS_RATIO") :: &
capi_U_103=U_ELECTRON_NEUTRON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_PROTON_MAG__MOM__RATIO=-658.21068789_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_PROTON_MAG__MOM__RATIO=0.00000020_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_PROTON_MAG__MOM__RATIO"):: &
capi_104=ELECTRON_PROTON_MAG__MOM__RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_PROTON_MAG__MOM__RATIO") :: &
capi_U_104=U_ELECTRON_PROTON_MAG__MOM__RATIO !< C API dimensionless
